generated/nixidy/prod/jellyfin/Deployment-jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/controller: jellyfin
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jellyfin
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: jellyfin
      app.kubernetes.io/instance: jellyfin
      app.kubernetes.io/name: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: jellyfin
        app.kubernetes.io/instance: jellyfin
        app.kubernetes.io/name: jellyfin
    spec:
      automountServiceAccountToken: true
      containers:
        - image: ghcr.io/jellyfin/jellyfin:10.10.7
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8096
            timeoutSeconds: 1
          name: jellyfin
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8096
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8096
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config
              name: cache
            - mountPath: /cache
              name: tmpfs
              subPath: cache
            - mountPath: /config/log
              name: tmpfs
              subPath: log
            - mountPath: /tmp
              name: tmpfs
              subPath: tmp
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: jellyfin-cache
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - emptyDir: {}
          name: tmpfs
