generated/nixidy/prod/jellyfin/Service-jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/service: jellyfin
  name: jellyfin
  namespace: media
spec:
  ports:
    - name: http
      port: 8096
      protocol: TCP
      targetPort: 8096
  selector:
    app.kubernetes.io/controller: jellyfin
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  type: ClusterIP
